パスの設計変更・検索ロジックの変更・例外処理の実装