@@ -1,12 +1,16 @@
 package com.raisetech.api.sean.controller;
 
 import com.raisetech.api.sean.entity.RugbyPlayer;
+import com.raisetech.api.sean.service.PlayerNotFoundException;
 import com.raisetech.api.sean.service.RugbyPlayerInfoService;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @RestController
@@ -19,15 +23,25 @@ public class RugbyPlayerController {
         this.rugbyPlayerInfoService = rugbyPlayerInfoService;
     }
 
-    @GetMapping("/rugbyPlayers/all")
-    public List<RugbyPlayer> getRugbyPlayers() {
-        return rugbyPlayerInfoService.findAll();
-    }
-
+    //全件取得およびポジションでのデータ取得はRugbyPlayerを、体重と身長でのデータ取得はPlayerResponseを返す
     @GetMapping("/rugbyPlayers")
-    public List<PlayerResponse> getRugbyPlayersHeight(@RequestParam int height) {
-        List<RugbyPlayer> names = rugbyPlayerInfoService.findByHeightHigherThan(height);
-        List<PlayerResponse> response = names.stream().map(name -> new PlayerResponse(name)).toList();
-        return response;
+    public ResponseEntity<?> getRugbyPlayers(@RequestParam(required = false) Integer height, Integer weight, String posi) {
+        try {
+            List<RugbyPlayer> players = rugbyPlayerInfoService.findPlayersByReference(height, weight, posi);
+
+            if (height != null || weight != null) {
+                List<PlayerResponse> playerResponses = players.stream()
+                        .map(PlayerResponse::new)
+                        .collect(Collectors.toList());
+                return new ResponseEntity<>(playerResponses, HttpStatus.OK);
+            }
+            return new ResponseEntity<>(players, HttpStatus.OK);
+
+        } catch (PlayerNotFoundException e) {
+            return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
+            
+        } catch (RuntimeException e) {
+            return new ResponseEntity<>("An unexpected error occurred.", HttpStatus.INTERNAL_SERVER_ERROR);
+        }
     }
 }
